# turing

./: LICENSE  README.md  turing.cabal
examples/: MoveRight.hs
src/Model/: Turing.hs
