name:                turing
version:             0.0.0.0
license:             BSD3
license-file:        LICENSE
author:              Alexander Foremny
maintainer:          alexanderforemny@gmail.com
category:            Model
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:      src
  exposed-modules:     Model.Turing
  build-depends:       base ==4.5.*, containers ==0.4.*, ListZipper ==1.2.*

